--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "id": "f51634ba-6853-452e-b46a-fccd283729c1",
    "metadata": {},
    "outputs": [
@@ -663,6 +663,285 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "249eed48-b2a0-4b25-9e93-5ae637a63787",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e07344c2-b6a5-47bc-b4ff-5b5db587cdf9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0993711e-416b-4dbd-be41-025bb32f31ee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9472488b-9a80-41c0-931e-f3244b8dd6cc",
+   "metadata": {},
+   "source": [
+    "# refining"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "499c0c9b-8c0a-4456-ac42-46cfd139d089",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Cleaned text saved to cleaned_output.txt\n",
+      "✅ Structured JSON saved to structured_output.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "import json\n",
+    "\n",
+    "# ---------------------- CLEANING FUNCTIONS -----------------------\n",
+    "\n",
+    "def remove_repeated_phrases(text):\n",
+    "    \"\"\"Remove repeated phrases (e.g., Activity 1.1 repeated)\"\"\"\n",
+    "    return re.sub(r'\\b(\\w+(?:\\s+\\w+){0,4})\\b(?:\\s+\\1\\b)+', r'\\1', text, flags=re.IGNORECASE)\n",
+    "\n",
+    "\n",
+    "def fix_spacing_and_formatting(text):\n",
+    "    \"\"\"Fix bullet points, spacing, and line breaks.\"\"\"\n",
+    "    text = re.sub(r'\\bn\\s*', '\\n- ', text)  # Replace 'n' with bullet points\n",
+    "    return text\n",
+    "\n",
+    "\n",
+    "def clean_broken_words(text):\n",
+    "    \"\"\"Fix broken words split by OCR.\"\"\"\n",
+    "    text = re.sub(r'\\bn\\s+', ' ', text)  # Remove standalone 'n'\n",
+    "    text = re.sub(r'(\\w)-\\s*(\\w)', r'\\1\\2', text)  # Fix hyphenated broken words\n",
+    "    return text\n",
+    "\n",
+    "\n",
+    "def clean_headings(text):\n",
+    "    \"\"\"Clean broken headings and duplicates.\"\"\"\n",
+    "    text = re.sub(r'(\\d+(?:\\.\\d+)+)\\s+([A-Z]+(?:\\s+[A-Z]+)+)', lambda m: m.group(1) + \" \" + m.group(2).replace(' ', ''), text)\n",
+    "    text = re.sub(r'\\b(\\d+(?:\\.\\d+)+.*?)\\1\\b', r'\\1', text)  # Remove duplicated headings\n",
+    "    return text\n",
+    "\n",
+    "\n",
+    "def remove_figure_activity_repeats(text):\n",
+    "    \"\"\"Remove repeated figure and activity captions.\"\"\"\n",
+    "    text = re.sub(r'(Figure\\s+\\d+\\.\\d+)(\\s+\\1)+', r'\\1', text)\n",
+    "    text = re.sub(r'(Activity\\s+\\d+\\.\\d+)(\\s+\\1)+', r'\\1', text)\n",
+    "    return text\n",
+    "\n",
+    "\n",
+    "def format_equations(text):\n",
+    "    \"\"\"Standardize equations.\"\"\"\n",
+    "    text = re.sub(r'([A-Za-z0-9\\(\\)]+)\\s*[-–>]\\s*([A-Za-z0-9\\(\\)]+)', r'\\1 → \\2', text)\n",
+    "    text = re.sub(r'((?:[A-Za-z0-9\\(\\)]+\\s*\\+\\s*)+[A-Za-z0-9\\(\\)]+)\\s*→\\s*((?:[A-Za-z0-9\\(\\)]+\\s*\\+\\s*)*[A-Za-z0-9\\(\\)]+)', r'\\n\\1 → \\2\\n', text)\n",
+    "    return text\n",
+    "\n",
+    "\n",
+    "def add_section_breaks(text):\n",
+    "    \"\"\"Add line breaks before headings for better segmentation.\"\"\"\n",
+    "    return re.sub(r'(\\n*)(\\d+(?:\\.\\d+)*\\s+[A-Z][^\\n]+)', r'\\n\\n\\2\\n', text)\n",
+    "\n",
+    "\n",
+    "def remove_ktbs_notices(text):\n",
+    "    \"\"\"Remove KTBS copyright notices.\"\"\"\n",
+    "    return re.sub(r'©KTBS Not to be re published(?: Science)?', '', text, flags=re.IGNORECASE)\n",
+    "\n",
+    "\n",
+    "def clean_full_text(text):\n",
+    "    \"\"\"Pipeline of all cleaning functions.\"\"\"\n",
+    "    text = remove_ktbs_notices(text)  # ✅ First remove KTBS notices\n",
+    "    text = remove_repeated_phrases(text)\n",
+    "    text = fix_spacing_and_formatting(text)\n",
+    "    text = clean_broken_words(text)\n",
+    "    text = clean_headings(text)\n",
+    "    text = remove_figure_activity_repeats(text)\n",
+    "    text = format_equations(text)\n",
+    "    text = add_section_breaks(text)\n",
+    "    text = final_cleanup(text)\n",
+    "    return text\n",
+    "\n",
+    "\n",
+    "# ---------------------- STRUCTURE TEXT TO JSON -----------------------\n",
+    "\n",
+    "def structure_text_to_json(text):\n",
+    "    \"\"\"\n",
+    "    Splits cleaned text into headings and their corresponding content, preserving order.\n",
+    "    \"\"\"\n",
+    "    structured_data = {}\n",
+    "    current_heading = \"INTRODUCTION\"  # Default starting heading\n",
+    "    buffer = \"\"\n",
+    "\n",
+    "    # Pattern for numeric headings like 1.1, 1.1.1 etc.\n",
+    "    heading_pattern = re.compile(r'^(\\d+(?:\\.\\d+)+\\s+.*)', re.MULTILINE)\n",
+    "\n",
+    "    lines = text.split('\\n')\n",
+    "    for line in lines:\n",
+    "        line = line.strip()\n",
+    "        if not line:\n",
+    "            continue  # Skip empty lines\n",
+    "\n",
+    "        heading_match = heading_pattern.match(line)\n",
+    "        if heading_match:\n",
+    "            # Save current buffer under previous heading\n",
+    "            if buffer:\n",
+    "                structured_data[current_heading] = buffer.strip()\n",
+    "                buffer = \"\"\n",
+    "            # Set new heading\n",
+    "            current_heading = heading_match.group(1).strip()\n",
+    "        else:\n",
+    "            buffer += \" \" + line  # Accumulate content\n",
+    "\n",
+    "    # Save any remaining content\n",
+    "    if buffer:\n",
+    "        structured_data[current_heading] = buffer.strip()\n",
+    "\n",
+    "    return structured_data\n",
+    "def final_cleanup(text):\n",
+    "    # Fix common broken words\n",
+    "    text = re.sub(r'\\b→\\s*t', 't', text)  # Fix '→ t' as 't'\n",
+    "    text = re.sub(r'\\b→\\s*n', 'n', text)  # Fix '→ n' as 'n'\n",
+    "    text = re.sub(r'\\b→\\s*ature', 'nature', text)  # Fix '→ ature' as 'nature'\n",
+    "    text = re.sub(r'\\b→\\s*eeds', 'needs', text)  # Fix '→ eeds' as 'needs'\n",
+    "    text = re.sub(r'\\b→\\s*itrate', 'nitrate', text)  # Fix '→ itrate' as 'nitrate'\n",
+    "    text = re.sub(r'\\bail\\b', 'nail', text)  # Fix 'ail' to 'nail'\n",
+    "    text = re.sub(r'\\blear\\s*→\\s*t\\b', 'learnt', text)  # Fix 'lear → t' as 'learnt'\n",
+    "    \n",
+    "    # Fix broken \"not\"\n",
+    "    text = re.sub(r'→\\s*ot', 'not', text)\n",
+    "    \n",
+    "    # Remove repeated figures/activities\n",
+    "    text = re.sub(r'(Figure\\s+\\d+\\.\\d+)(\\s*\\1)+', r'\\1', text)\n",
+    "    text = re.sub(r'(Activity\\s+\\d+\\.\\d+)(\\s*\\1)+', r'\\1', text)\n",
+    "    \n",
+    "    # Remove unwanted multiple quotes\n",
+    "    text = re.sub(r'(“[^”]+”)(\\1)+', r'\\1', text)\n",
+    "\n",
+    "    # Remove standalone arrows in text (keep in equations)\n",
+    "    text = re.sub(r'(\\n|\\s)→(\\s)', r'\\2', text)  # Remove arrow if just hanging\n",
+    "\n",
+    "    return text\n",
+    "\n",
+    "\n",
+    "# ---------------------- MAIN EXECUTION -----------------------\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    # ✅ File Paths\n",
+    "    extracted_text_file = \"structured_science_text.json\"  # Upload this file\n",
+    "    output_cleaned_text_file = \"cleaned_output.txt\"\n",
+    "    output_json_file = \"structured_output.json\"\n",
+    "\n",
+    "    # ✅ Step 1: Load extracted text from file\n",
+    "    with open(extracted_text_file, \"r\", encoding=\"utf-8\") as file:\n",
+    "        raw_text = file.read()\n",
+    "\n",
+    "    # ✅ Step 2: Clean the full text\n",
+    "    cleaned_text = clean_full_text(raw_text)\n",
+    "    \n",
+    "\n",
+    "    # ✅ Step 3: Save cleaned text (Optional for review)\n",
+    "    with open(output_cleaned_text_file, \"w\", encoding=\"utf-8\") as file:\n",
+    "        file.write(cleaned_text)\n",
+    "    print(f\"✅ Cleaned text saved to {output_cleaned_text_file}\")\n",
+    "\n",
+    "    # ✅ Step 4: Structure into JSON\n",
+    "    structured_json = structure_text_to_json(cleaned_text)\n",
+    "\n",
+    "    # ✅ Step 5: Save structured JSON\n",
+    "    with open(output_json_file, \"w\", encoding=\"utf-8\") as file:\n",
+    "        json.dump(structured_json, file, ensure_ascii=False, indent=4)\n",
+    "    print(f\"✅ Structured JSON saved to {output_json_file}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ed94600-659b-44cb-a133-d59389c00e11",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "574a566c-0c83-4d71-b28e-a701efcd3588",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c82a34d6-0ebc-4f31-9442-e69c9f2ebeab",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a4c129e-7d35-4bb4-bad8-b9449eec368a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d20dcb7-bbfd-4424-b351-9044e6ce8f0e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9688bc77-c257-426c-ae1a-8750aa0d6539",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5a1e8d7-c25a-4636-8875-0e4593ef46d4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58ce83ad-0f57-4716-b081-4b0c912f5eb5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38293d88-5de3-429c-ac24-42cc0e1bd0ed",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c4cb66e-43ef-42a9-9a52-5854098c8976",
    "metadata": {},
    "outputs": [],
    "source": []
